--- a/mylearnus.html
+++ b/mylearnus.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>learnus made by hyobin</title>
     <link rel="stylesheet" href="mylearnus.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -61,6 +64,7 @@
                 </div>
                 <div class="update">
                     <li>2022-02-24</li>
+
                     <li>2022-02-10</li>
                     <li>2022-02-10</li>
                     <li>2022-01-24</li>
@@ -83,54 +87,52 @@
         <button class="search-button2">상세검색</button>
     </form>
 
-    <artice class="mainbox">
+    <artice class="mainbox1">
         <h2 class="hot">인기강좌</h2>
         <div class="container2">
             <a href="https://www.learnus.org/local/ubonline/view.php?id=216129&group=&returnurl=aHR0cHM6Ly93d3cubGVhcm51cy5vcmc="><section class="lec">
-                <img src="lec.jpg" width="200px">
-                <hr>
-                <p class="desc">[교육대학원] 전문과정</p>
-                <p class="lec-title">쉽고 재미있는 중고등 영어</p>
-                <hr>
-                <article class="recruit">
-                    <div class="recruit-on">모집중</div>
-                    <div class="due">2022-03-31~2023-02-28</div>
+                <img src="lec.jpg" width="250px">
+                <article class="desc">
+                    <p class="desc1">[교육대학원] 전문과정</p>
+                    <p class="desc2">쉽고 재미있는 중고등 영어</p>
+                </article> 
+                <article class="due">
+                    <div class="due1">모집중</div>
+                    <div class="due2">2022-03-31~2023-02-28</div>
                 </article>
             </section></a>
             <a href="https://www.learnus.org/local/ubonline/view.php?id=216129&group=&returnurl=aHR0cHM6Ly93d3cubGVhcm51cy5vcmc="><section class="lec">
-                <img src="lec.jpg" width="200px">
-                <hr>
-                <p class="desc">[교육대학원] 전문과정</p>
-                <p class="lec-title">쉽고 재미있는 중고등 영어</p>
-                <hr>
-                <article class="recruit">
-                    <div class="recruit-on">모집중</div>
-                    <div class="due">2022-03-31~2023-02-28</div>
+                <img src="lec.jpg" width="250px">
+                <article class="desc">
+                    <p class="desc1">[교육대학원] 전문과정</p>
+                    <p class="desc2">쉽고 재미있는 중고등 영어</p>
+                </article> 
+                <article class="due">
+                    <div class="due1">모집중</div>
+                    <div class="due2">2022-03-31~2023-02-28</div>
+                </article>
+            </section></a><a href="https://www.learnus.org/local/ubonline/view.php?id=216129&group=&returnurl=aHR0cHM6Ly93d3cubGVhcm51cy5vcmc="><section class="lec">
+                <img src="lec.jpg" width="250px">
+                <article class="desc">
+                    <p class="desc1">[교육대학원] 전문과정</p>
+                    <p class="desc2">쉽고 재미있는 중고등 영어</p>
+                </article> 
+                <article class="due">
+                    <div class="due1">모집중</div>
+                    <div class="due2">2022-03-31~2023-02-28</div>
+                </article>
+            </section></a><a href="https://www.learnus.org/local/ubonline/view.php?id=216129&group=&returnurl=aHR0cHM6Ly93d3cubGVhcm51cy5vcmc="><section class="lec">
+                <img src="lec.jpg" width="250px">
+                <article class="desc">
+                    <p class="desc1">[교육대학원] 전문과정</p>
+                    <p class="desc2">쉽고 재미있는 중고등 영어</p>
+                </article> 
+                <article class="due">
+                    <div class="due1">모집중</div>
+                    <div class="due2">2022-03-31~2023-02-28</div>
                 </article>
             </section></a>
-            <a href="https://www.learnus.org/local/ubonline/view.php?id=216129&group=&returnurl=aHR0cHM6Ly93d3cubGVhcm51cy5vcmc="><section class="lec">
-                <img src="lec.jpg" width="200px">
-                <hr>
-                <p class="desc">[교육대학원] 전문과정</p>
-                <p class="lec-title">쉽고 재미있는 중고등 영어</p>
-                <hr>
-                <article class="recruit">
-                    <div class="recruit-on">모집중</div>
-                    <div class="due">2022-03-31~2023-02-28</div>
-                </article>
-            </section></a>
-            <a href="https://www.learnus.org/local/ubonline/view.php?id=216129&group=&returnurl=aHR0cHM6Ly93d3cubGVhcm51cy5vcmc="><section class="lec">
-                <img src="lec.jpg" width="200px">
-                <hr>
-                <p class="desc">[교육대학원] 전문과정</p>
-                <p class="lec-title">쉽고 재미있는 중고등 영어</p>
-                <hr>
-                <article class="recruit">
-                    <div class="recruit-on">모집중</div>
-                    <div class="due">2022-03-31~2023-02-28</div>
-                </article>
-            </section></a>
-            
+                      
         </div>
     </artice>
 
