--- a/mylearnus.html
+++ b/mylearnus.html
@@ -34,8 +34,8 @@
         </div>
     </nav>
     
-    <div class="banner">
-        <a href="https://www.learnus.org/local/ubonline/index.php?group=1&ordertype=rc_d&keyword=&progress%5B%5D=1&progress%5B%5D=3&pay%5B%5D=0&enrol_start=&enrol_end=&study_start=&study_end=#" target="_blank"><img src="banner.png" width="1263px"></a>
+    <div>
+        <a href="https://www.learnus.org/local/ubonline/index.php?group=1&ordertype=rc_d&keyword=&progress%5B%5D=1&progress%5B%5D=3&pay%5B%5D=0&enrol_start=&enrol_end=&study_start=&study_end=#" target="_blank"><img src="banner.png" class="banner"></a>
     </div>
 
     <div class="container">
